--- a/package.json
+++ b/package.json
@@ -17,5 +17,12 @@
   "bugs": {
     "url": "https://github.com/verasraul/assesment-phase3-part2/issues"
   },
-  "homepage": "https://github.com/verasraul/assesment-phase3-part2#readme"
+  "homepage": "https://github.com/verasraul/assesment-phase3-part2#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "mongoose": "^6.3.6",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.16"
+  }
 }
